# test-rust-guard-build

./: readme.md
.github/workflows/: build-rust.yml  rust-guard-build.yml
backend/app/Http/Controllers/: LicenseController.php
backend/app/Models/: License.php  LicenseActivation.php
backend/config/: license.php
backend/database/migrations/: 2025_08_21_000001_create_licenses_tables.php
backend/database/seeders/: LicenseSeeder.php
backend/routes/: api.php
electron-client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
electron-client/native/: Cargo.toml
electron-client/native/src/: lib.rs
electron-client/src/: main.js  main.ts  preload.js  preload.ts
electron-client/src/main-secure/: license-core.js  license-core.ts  native.js  native.ts  secret-store.js  secret-store.ts
electron-client/src/native/: libhwid_guard.dylib
electron-client/src/renderer/: hwid.js  hwid.ts  index.html  license copy.ts  license.ts  native.ts
frontend/: build.config.js  electron-builder.json  main.js  package-lock.json  package.json
frontend/rust-module/: Cargo.toml
frontend/rust-module/src/: lib.rs
frontend/scripts/: build-rust.js  download-rust.js  sign-windows.js
frontend/src/: App.vue  main.js  preload.js
frontend/src/components/: LicenseManager.vue
frontend/src/scripts/: after-pack.js
laravel-license-server/app/Http/Controllers/: LicenseController.php
laravel-license-server/app/Models/: License.php
laravel-license-server/app/Services/: LicenseSigner.php
laravel-license-server/database/migrations/: 2025_08_21_000001_create_licenses_tables.php
laravel-license-server/routes/: api.php
rust-guard/: Cargo.toml
rust-guard/src/: lib.rs
