[package]
name = "hwid_guard"
version = "0.1.0"
edition = "2021"

[lib]
name = "hwid_guard"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ed25519-dalek = { version = "1", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

sysinfo = "0.30"
sha2 = "0.10"
hex = "0.4"

chrono = { version = "0.4", features = ["clock"] }

argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand_core = "0.6"
