[package]
name = "electron_secure_module"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonwebtoken = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.23"
ring = "0.16"
rand = "0.8"
rsa = "0.5"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
winapi = { version = "0.3", features = ["debugapi"] }

[build-dependencies]
cc = "1.0"